--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,7 +10,7 @@ jobs:
         - name: Step one
           uses: actions/checkout@v2
         - name: S:tep two
-          run: env | sort
+          run: date
     job2:
         name: Second job
         runs-on: windows-latest
@@ -18,4 +18,22 @@ jobs:
         - name: Step one
           uses: actions/checkout@v2
         - name: Step two
-          run: "Get-ChildItem Env: | Sort-Object Name"
+          run: "date"
+    job3:
+        name: Third job
+        runs-on: macos-latest
+        steps:
+        - name: Step one
+          uses: actions/checkout@v2
+        - name: Step two
+          run: date
+    job4:
+        needs: [job1,job2,job3]
+        name: Forth job
+        runs-on: macos-latest
+        steps:
+        - name: Step one
+          uses: actions/checkout@v2
+        - name: Step two
+          run: date
+          
