--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -7,33 +7,8 @@ jobs:
         name: First job
         runs-on: ubuntu-latest
         steps:
-        - name: Step one
+        - name: Step one - Check out code
           uses: actions/checkout@v2
-        - name: S:tep two
-          run: date
-    job2:
-        name: Second job
-        runs-on: windows-latest
-        steps:
-        - name: Step one
-          uses: actions/checkout@v2
-        - name: Step two
-          run: "date"
-    job3:
-        name: Third job
-        runs-on: macos-latest
-        steps:
-        - name: Step one
-          uses: actions/checkout@v2
-        - name: Step two
-          run: date
-    job4:
-        needs: [job1,job2,job3]
-        name: Forth job
-        runs-on: macos-latest
-        steps:
-        - name: Step one
-          uses: actions/checkout@v2
-        - name: Step two
-          run: date
-          
+        - name: Step two - Create files
+          run: ./Create_files.sh
+    
