--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -9,6 +9,8 @@ jobs:
         steps:
         - name: Step one - Check out code
           uses: actions/checkout@v2
-        - name: Step two - Create files
+        - name: Step two make file executable
+          uses: chmod +x ./Create_files.sh
+        - name: Step three - Create files
           run: ./Create_files.sh
     
