--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,7 +10,8 @@ jobs:
         - name: Step one - Check out code
           uses: actions/checkout@v2
         - name: Step two make file executable
-          run: chmod +x ./Create_files.sh
+          run: chmod +x ./Create_files.sh ./amount-files_before.sh
         - name: Step three - Create files
           run: ./Create_files.sh
-    
+        - name: Step four - count files
+          run: ./amount-files_before.sh
