--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -32,5 +32,5 @@ jobs:
           - name: Step one - Check out code
             uses: actions/checkout@v2
           - name: Step one windows make file executable
-            run: create-files.ps1
+            run: powershell create-files.ps1
   
