--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -36,7 +36,9 @@ jobs:
             with:
              path: .\
              recurse: true 
-             output: results.sarif  
+             output: results.sarif
+             includeDefaultRules: true
+          
           - name: Step two windows make file executable
             run: powershell.exe .\create-files.ps1
           - name: Step three Clean up files
