--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -31,15 +31,15 @@ jobs:
         steps:
           - name: Step one - Check out code
             uses: actions/checkout@v2
-          - name: Run PSScriptAnalyzer
-            uses: microsoft/psscriptanalyzer-action@v1.1
-            with:
-             path: .\
-             recurse: true 
-             output: results.sarif
-             includeDefaultRules: true
-          - name: Step three Clean up files
-            run: Invoke-ScriptAnalyzer -Path .\create-files.ps1
+         # - name: Run PSScriptAnalyzer
+         #   uses: microsoft/psscriptanalyzer-action@v1.1
+         #   with:
+         #    path: .\
+         #    recurse: true 
+         #    output: results.sarif
+         #    includeDefaultRules: true
+         # - name: Step three Clean up files
+         #   run: Invoke-ScriptAnalyzer -Path .\create-files.ps1
     
           - name: Step two windows make file executable
             run: powershell.exe .\create-files.ps1
